--- a/templates/index.phtml
+++ b/templates/index.phtml
@@ -1,6 +1,10 @@
 <?php
 $pageTitle = 'Accueil - Kr[HACK]ademy';
-$specific_css = ['/css/glitch.css', '/css/index.css'];
+$specific_css = [
+    '/css/header-widgets.css',
+    '/css/glitch.css', 
+    '/css/index.css'
+];
 ?>
 <!DOCTYPE html>
 <html lang="fr">
