--- a/templates/challenges.phtml
+++ b/templates/challenges.phtml
@@ -1,6 +1,9 @@
 <?php
 $pageTitle = 'Challenges - Kr[HACK]ademy';
-$specific_css = ['/css/shared-components.css'];
+$specific_css = [
+    '/css/header-widgets.css',
+    '/css/shared-components.css'
+];
 ?>
 <!DOCTYPE html>
 <html lang="fr">
