--- a/templates/partials/header.phtml
+++ b/templates/partials/header.phtml
@@ -1,28 +1,26 @@
+<?php
+$leaderboardService = new LeaderboardService($pdo);
+$leaderboardWidgetData = $leaderboardService->getWidgetData($_SESSION['user_id'] ?? null);
+?>
 <header>
     <a href="/"><img src="/images/logo_krhacken_invert2.webp" alt="Logo Krhackademy" width="40" height="40"/></a>
     <h1 class="title"> <a href="/">Kr[HACK]ademy</a> </h1>
-    
     <nav class="nav-bar" aria-label="Navigation principale">
         <ul id="nav-links-desktop">
-            <li class="<?php echo ($currentPage === 'index') ? 'active' : ''; ?>"><a href="/">ACCUEIL</a></li>
-            <li class="<?php echo ($currentPage === 'lessons') ? 'active' : ''; ?>"><a href="/lessons">LEÇONS</a></li>
-            <li class="<?php echo ($currentPage === 'challenges') ? 'active' : ''; ?>"><a href="/challenges">CHALLENGES</a></li>
-            <li class="<?php echo ($currentPage === 'scenarios') ? 'active' : ''; ?>"><a href="/scenarios">SCÉNARIOS</a></li>
+            <li class="<?= ($currentPage === 'index') ? 'active' : '' ?>"><a href="/">ACCUEIL</a></li>
+            <li class="<?= ($currentPage === 'lessons') ? 'active' : '' ?>"><a href="/lessons">LEÇONS</a></li>
+            <li class="<?= ($currentPage === 'challenges') ? 'active' : '' ?>"><a href="/challenges">CHALLENGES</a></li>
+            <li class="<?= ($currentPage === 'scenarios') ? 'active' : '' ?>"><a href="/scenarios">SCÉNARIOS</a></li>
         </ul>
     </nav>
-
     <button class="fas fa-bars" aria-label="Ouvrir le menu de navigation" aria-expanded="false" aria-controls="mobile-nav-menu"></button>
-    
     <div class="header-actions">
-        <?php if ($currentPage !== 'index'): ?>
+        <?php if ($currentPage !== 'index' && $currentPage !== ''): ?>
             <button id="search-toggle-btn" class="fas fa-search" aria-label="Ouvrir la barre de recherche" aria-expanded="false" aria-controls="filter-controls"></button>
         <?php endif; ?>
-
         <button id="leaderboard-toggle-btn" class="fas fa-trophy" aria-label="Ouvrir le classement" aria-expanded="false" aria-controls="leaderboard-menu"></button>
-        
         <button id="profile-toggle-btn" class="fas fa-user-circle" aria-label="Ouvrir le menu du profil" aria-controls="profile-menu"></button>
     </div>
-
     <nav class="nav-bar-mobile" id="mobile-nav-menu" aria-hidden="true">
         <ul>
             <li><a href="/">ACCUEIL</a></li>
@@ -32,13 +30,7 @@
         </ul>
     </nav>
 </header>
-
 <?php require __DIR__ . '/profile-widget.phtml';?>
-
 <?php require __DIR__ . '/search-widget.phtml';?>
-
 <?php require __DIR__ . '/leaderboard-widget.phtml';?>
-
 <script src="/js/header.js" defer></script>
-
-<link rel="stylesheet" href="/css/header-footer.css"/>
