--- a/templates/challenges.phtml
+++ b/templates/challenges.phtml
@@ -19,6 +19,7 @@ $specific_css = [
     </main>
     <?php require __DIR__ . '/partials/footer.phtml'; ?>
     <script src="/js/progress-tracker.js" defer></script>
+    <script src="/js/search.js" defer></script>
     <?php require __DIR__ . '/partials/modal.phtml';?>
 </body>
 </html>
