--- a/templates/scenarios.phtml
+++ b/templates/scenarios.phtml
@@ -12,6 +12,7 @@ $specific_css = ['/css/shared-components.css'];
     </main>
     <?php require __DIR__ . '/partials/footer.phtml'; ?>
     <script src="/js/progress-tracker.js" defer></script>
+    <script src="/js/search.js" defer></script>
     <?php require __DIR__ . '/partials/modal.phtml';?>
 </body>
 </html>
