--- a/templates/partials/modal.phtml
+++ b/templates/partials/modal.phtml
@@ -1,4 +1,22 @@
-<div id="modal-container" class="modal-container">
+<?php
+    if (session_status() === PHP_SESSION_NONE) {
+        session_start();
+    }
+    $flash_message = $_SESSION['flash_message'] ?? null;
+    if ($flash_message) {
+        unset($_SESSION['flash_message']);
+    }
+?>
+
+<div 
+    id="modal-container" 
+    class="modal-container"
+    <?php if ($flash_message): ?>
+        data-flash-type="<?= htmlspecialchars($flash_message['type']) ?>"
+        data-flash-title="<?= htmlspecialchars($flash_message['title']) ?>"
+        data-flash-message="<?= htmlspecialchars($flash_message['message']) ?>"
+    <?php endif; ?>
+>
     <div class="modal-content">
         <span class="close-button">&times;</span>
         <div class="modal-body">
@@ -9,27 +27,3 @@
 </div>
 
 <script src="/js/modal.js" defer></script>
-
-<?php
-    if (session_status() === PHP_SESSION_NONE) {
-        session_start();
-    }
-
-    $flash_message = null;
-    if (isset($_SESSION['flash_message'])) {
-        $flash_message = $_SESSION['flash_message'];
-        unset($_SESSION['flash_message']);
-    }
-
-    if ($flash_message):
-    ?>
-    <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            modal.showModal(
-                '<?= htmlspecialchars($flash_message['type']) ?>',
-                '<?= htmlspecialchars($flash_message['title']) ?>',
-                '<?= htmlspecialchars($flash_message['message']) ?>'
-            );
-        });
-    </script>
-<?php endif; ?>
