--- a/templates/partials/auth-header.phtml
+++ b/templates/partials/auth-header.phtml
@@ -5,7 +5,7 @@ $specific_css = ['/css/auth.css'];
 <html lang="fr">
 <?php require __DIR__ . '/head.phtml'; ?>
 <body class="auth-page">
-    <a href="/" onclick="history.back(); return false;" class="btn-glass back-button">
+    <a id="go-back-button" href="/" class="btn-glass back-button">
         <i class="fas fa-arrow-left"></i> Retour
     </a>
     <div class="auth-container">
