--- a/templates/leaderboard.phtml
+++ b/templates/leaderboard.phtml
@@ -1,6 +1,6 @@
 <?php
 $pageTitle = 'Classement - Kr[HACK]ademy';
-$specific_css = ['/css/menus.css'];
+$specific_css = ['/css/content-page.css'];
 ?>
 <!DOCTYPE html>
 <html lang="fr">
@@ -11,7 +11,7 @@ $specific_css = ['/css/menus.css'];
     </a>
     <main class="container">
         <div class="content-container">
-            <div class="content-wrapper">
+            <div class="content-wrapper menu">
                 <header class="content-header">
                     <i class="fas fa-trophy content-icon"></i>
                     <div class="content-title-group">
