--- a/templates/settings.phtml
+++ b/templates/settings.phtml
@@ -1,6 +1,6 @@
 <?php
 $pageTitle = 'Paramètres - Kr[HACK]ademy';
-$specific_css = ['/css/menus.css'];
+$specific_css = ['/css/content-page.css'];
 
 $currentUser = [
     'username' => 'Kolonel_07',
@@ -16,7 +16,7 @@ $currentUser = [
     </a>
     <main class="container">
         <div class="content-container">
-            <div class="content-wrapper">
+            <div class="content-wrapper menu">
                 <header class="content-header">
                     <i class="fas fa-cog content-icon"></i>
                     <div class="content-title-group">
