--- a/templates/profile.phtml
+++ b/templates/profile.phtml
@@ -1,6 +1,6 @@
 <?php
 $pageTitle = 'Mon Profil - Kr[HACK]ademy';
-$specific_css = ['/css/menus.css'];
+$specific_css = ['/css/content-page.css'];
 
 $userProfile = [
     'username' => 'Kolonel_07',
@@ -21,7 +21,7 @@ $userProfile = [
     </a>
     <main class="container">
         <div class="content-container">
-            <div class="content-wrapper">
+            <div class="content-wrapper menu">
                 <header class="content-header">
                     <i class="fas fa-user-circle content-icon"></i>
                     <div class="content-title-group">
