séparation menu content

--- a/templates/profile.phtml
+++ b/templates/profile.phtml
@@ -1,6 +1,6 @@
 <?php
 $pageTitle = 'Mon Profil - Kr[HACK]ademy';
-$specific_css = ['/css/content-page.css'];
+$specific_css = ['/css/menus.css'];
 ?>
 <!DOCTYPE html>
 <html lang="fr">
